update Signed-off-by: BruLo2017 <BruLo_2017@163.com>

--- a/src/main/resources/static/html/estimate.html
+++ b/src/main/resources/static/html/estimate.html
@@ -16,10 +16,10 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
-					<button class="layui-btn layui-btn-normal layui-btn-sm problem_describe btn" id="rollback"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
+					<!-- <button class="layui-btn layui-btn-normal layui-btn-sm problem_describe btn" id="rollback"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete"><span class="layui-icon">&#xe63c;</span>&nbsp;闭环处理</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" ><span class="layui-icon">&#xe770;</span>&nbsp;作业安排</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="coordinate" data-method="offset" data-type="t" ><span class="layui-icon">&#xe770;</span>&nbsp;外部协调</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" ><span class="layui-icon">&#xe770;</span>&nbsp;作业安排</button> -->
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="coordinatec" data-method="offset" data-type="t" ><span class="layui-icon">&#xe770;</span>&nbsp;下一步</button>
 				</div>
 				<div id="work_plan_tree"></div>
 				<div id="coordinate_tree"></div>
