--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -157,10 +157,10 @@
 
 			  <div class="layui-form-item" id="problem_report" style="display: none;">
 			  	<div class="layui-col-md-offset5 layui-col-xs-offset5">
-			  		<button class="layui-btn saveBtn primary-btn" type="button" id="saveMassBtn">
+			  		<!-- <button class="layui-btn saveBtn primary-btn" type="button" id="saveMassBtn">
 				           <i class="layui-icon">&#xe656;</i>问题批量上报</button> &nbsp;&nbsp;
 				    <button class="layui-btn saveBtn primary-btn" lay-submit lay-filter="saveBtn" id="saveBtn">
-				           <i class="layui-icon">&#xe621;</i>暂&nbsp;&nbsp;&nbsp;&nbsp;存&nbsp;&nbsp;</button> &nbsp;&nbsp;
+				           <i class="layui-icon">&#xe621;</i>暂&nbsp;&nbsp;&nbsp;&nbsp;存&nbsp;&nbsp;</button> &nbsp;&nbsp; -->
 				    <button class="layui-btn primary-btn" type="button" lay-submit lay-filter="problem_report">
 				    		<i class="layui-icon">&#x1005;</i>问题上报</button>
 			    </div>
